<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_50"
    tools:context="com.example.joker.pru.MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pru_back_below"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/pru_back_below" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_below="@+id/option_textView"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/pru_back"
            android:gravity="center"
            android:text="PUR"
            android:textColor="@color/white"
            android:textSize="64sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:text="@string/persone_unique_registration"
            android:textColor="@color/grey_200"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/option_textView"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:drawableRight="@drawable/ic_toc_black_24dp" />


        <!--THis is for show Bhamasha details -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardView_PURDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pru_back_below"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:elevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/person_user"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/image_descripation"
                    android:padding="15dp"
                    android:src="@drawable/ic_person_black_24dp" />

                <TextView
                    android:id="@+id/details_pur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/person_user"
                    android:text="@string/show_pur_details"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pur_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/details_pur"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/person_user"
                    android:text="@string/pur_detalis" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pur_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:layout_toRightOf="@id/person_user"
                    android:text="@string/show_details"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <!--THis is for downloading Birth Certificate -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardView_certificates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardView_PURDetails"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:elevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/download"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/image_descripation"
                    android:padding="15dp"
                    android:src="@drawable/ic_birth_certifiacet_download_24dp" />

                <TextView
                    android:id="@+id/details_certificate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/download"
                    android:text="@string/certificate"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/certificate_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/details_certificate"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/download"
                    android:text="@string/certificate_details" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/certificate_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:layout_toRightOf="@id/download"
                    android:text="@string/download_birth_certificate"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <!--THis is for showing Hospital Detalis -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardView_hospital"
            android:layout_below="@id/cardView_certificates"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:elevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/hospital"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/image_descripation"
                    android:padding="15dp"
                    android:src="@drawable/ic_local_hospital_black_24dp" />

                <TextView
                    android:id="@+id/details_hospital"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@id/hospital"
                    android:text="@string/hospital_details"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/hospital_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/details_hospital"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/hospital"
                    android:text="@string/_1_map_location_n2_navigation_n3_doctor_details" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hospital_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:layout_toRightOf="@id/hospital"
                    android:text="@string/show_hospital_details"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </RelativeLayout>


</ScrollView>
